# codex-pacer-upstream

./: .gitignore  AGENTS.md  package.json
docs/en/: getting-started.md  release-notes-v1.0.1.md  release-notes-v1.1.0.md  release-notes-v1.1.1.md
docs/zh-CN/: getting-started.md  release-notes-v1.0.1.md  release-notes-v1.1.0.md  release-notes-v1.1.1.md
scripts/: test-issue-1-view-controls.mjs  test-issue-3-custom-range.mjs  test-subscription-ledger.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs
src-tauri/icons/: icon.icns
src-tauri/sql/: indexes.sql  schema.sql
src-tauri/sql/queries/: quota_samples.sql  rate_limit_windows.sql  session_source_memberships.sql  sessions.sql  sessions_for_root.sql  usage_events.sql  usage_events_for_root.sql
src-tauri/src/: database.rs  importer.rs  lib.rs  macos_menu_bar.rs  macos_menu_bar_popup.m  main.rs  models.rs  pricing.rs  queries.rs  rate_limits.rs  sources.rs
src-tauri/src/database/: rate_limit_samples.rs  sources.rs  subscriptions.rs  sync_settings.rs
src/app/: I18nProvider.tsx  api.ts  format.ts  i18n.ts  subscriptionDates.ts  types.ts
src/components/: ModelShareChart.tsx  PopupSevenDayUsageChart.tsx  QuotaRingCard.tsx  QuotaTrendChart.tsx  SettingsPanel.tsx  TrendChart.tsx
src/features/conversations/: turnFormat.ts
src/features/dashboard/: dateWindows.ts  liveQuota.ts  queryKey.ts  shareSlices.ts
src/features/sources/: SidebarSourceManager.tsx  SourceAddModal.tsx  SourceDeleteDialog.tsx  index.ts  (+3 more)
src/i18n/: index.ts  types.ts
src/menu-bar-popup/: MenuBarPopup.tsx
(+4 files in other folders)
