[package]
name = "codex-pacer"
version = "1.1.1"
description = "Codex Pacer desktop analytics"
authors = ["Codex"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codex_counter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
log = "0.4"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1.48.0", features = ["time"] }
ureq = "2.12.1"
walkdir = "2.5.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3.23.0"
